--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@ $color-bg: #fefefe;
 $color-spacer: #eee;
 $color-text: #000;
 $color-nav: #444;
-$color-submenu-bg: #f9f9f9;
+$color-submenu-bg: #fcfcfc;
 $font-weight-light: 300;
 $font-weight-regular: 400;
 $font-weight-semi-bold: 550;
